--- a/views/example.handlebars
+++ b/views/example.handlebars
@@ -11,6 +11,9 @@
             <strong>Recipe Name</strong>: {{example.text}}</p>
           <p>
             <strong>Recipe Description:</strong> {{example.description}}</p>
+
+          <p> <strong>Ingredents:</strong></p>
+          <p>{{example.ingAdd}}</p>
             <a href="/">← Back To Home</a>
         </div>
       </div>
