--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -3,20 +3,31 @@
     <div class="row">
       <div class="col-8 offset-2">
         <h1>{{msg}}</h1>
-        <h2>Recipes</h2>
-        <form class="clearfix mb-4" method="POST" action="" id="formsub">
+        <h2>Recipe Database</h2>
+        <form class="clearfix mb-4" action="POST">
           <div class="form-group">
             <label for="example-text">Recipe Name</label>
-            <input type="text" id="example-text" class="form-control" aria-describedby="example-text" placeholder="Enter Recipe Name">
+            <input type="text" id="example-text" class="form-control" aria-describedby="example-text" placeholder="Enter Example Text">
           </div>
           <div class="form-group">
             <label for="example-description">Recipe Description</label>
-            <textarea class="form-control" id="example-description" aria-describedby="example-description" placeholder="Enter Recipe Description"></textarea>
+            <textarea class="form-control" id="example-description" aria-describedby="example-description" placeholder="Enter Example Description"></textarea>
           </div>
-<div>
-        
+
+      <h3>Add the Ingredients:</h3>
+          <ul id="pick-list" class="list-group">
+            {{#each ingredients}}
+           <li> <div class="form-check">
+            <input class="form-check-input addItem" name="ingredients"  type="checkbox" value="{{id}}" id="Check1">
+            <label class="form-check-label" for="defaultCheck1">
+              {{this.text}}
+            </label>
+            </div></li>
+           {{/each}}
+          </ul>
           <button id="submit" class="btn btn-primary float-right">Submit</button>
         </form>
+
         <h3>Recipe Cards:</h3>
         <ul id="example-list" class="list-group">
           {{#each examples}}
