--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -18,7 +18,7 @@
           <ul id="pick-list" class="list-group">
             {{#each ingredients}}
            <li> <div class="form-check">
-            <input class="form-check-input addItem" name="ingredients"  type="checkbox" value="{{id}}" id="Check1">
+            <input class="form-check-input addItem" name="selectIng"  type="checkbox" value="{{id}}" id="Check1">
             <label class="form-check-label" for="defaultCheck1">
               {{this.text}}
             </label>
